# Entain

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
architecture_diagram/: architecture.md
customer_feature_output/: customer_features.csv  customer_features.parquet  feature_build_report.json
design_note/: ai_assistance_note.md  architecture_design_note.md  feature_design_note.md  release_handover_design_note.md  system_design_note.md  validation_design_note.md
docs/: data_contract.md  operations_runbook.md  task_breakdown.md  testing_strategy.md
source_code/src/bet_pipeline/: __init__.py  build_features.py  cli.py  constants.py  contracts.py  io.py  validate.py
source_code/src/bet_pipeline/config/: feature_definitions.json  schema_contract.json
tests/: test_cli.py  test_data_observation.py  test_features.py  test_validation.py
validation_outputs/: invalid_bets.csv  validation_report.json
