[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entain-bet-pipeline"
version = "0.1.0"
description = "Local batch validation and customer feature pipeline for betting data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ML Engineering Submission" }]
dependencies = [
  "pandas>=2.0,<3.0"
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
bet-pipeline = "bet_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["source_code/src"]

[tool.setuptools.package-data]
bet_pipeline = ["config/*.json"]

[tool.pytest.ini_options]
pythonpath = ["source_code/src"]
testpaths = ["tests"]
addopts = "-q"
